--- a/index.css
+++ b/index.css
@@ -9,7 +9,10 @@ body {
   }
 
 img{
-    width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
   ul {
     position:absolute;
